# GLFW_Project_Template

./: CMakeLists.txt  README.md  glad.c  main.cpp
